# SwarmFinalProject

./: .gitignore  CMakeLists.txt  Makefile  NoveltySearch.py  README.md  cmake_install.cmake  config_buzzfile.sh  oracle.sh
argos_mpga_novelty/: CMakeLists.txt  main.cpp  novel_cmpga.cpp  novel_cmpga.h
controllers/: noveltys.bdb  noveltys.bo  noveltys.bzz
embedding/: CMakeLists.txt  Makefile  cmake_install.cmake  experiment_1  main.cpp
experiments/: noveltys-trial.argos  noveltys.argos
loop_functions/: CMakeLists.txt  Info.txt  Makefile  cmake_install.cmake  experiment1_loop_functions.cpp  experiment1_loop_functions.h  mpga.cpp  mpga.h  mpga_loop_functions.h
